compiler-core/src/parse/snapshots/gleam_core__parse__tests__internal_attribute_on_type_variant.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1619
expression: "\ntype Wibble {\n    @internal\n    Wibble1\n}\n"
---
----- SOURCE CODE

type Wibble {
    @internal
    Wibble1
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     @internal
  │     ^^^^^^^^^ This attribute cannot be used on a type variant.
